# mengchuangjianghe-asr

./: .gitignore  NOTICE  PUBLISH.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/: build.gradle.kts
android/src/main/cpp/: CMakeLists.txt  whisper_api.h  whisper_jni.cpp
android/src/main/java/com/mengchuangjianghe/asr/android/: AsrAndroid.kt  WhisperNative.kt  WhisperNativeEngine.kt
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/com/mengchuangjianghe/asr/: AsrEngine.kt  AsrFactory.kt  AsrResult.kt  DemoAsrEngine.kt  HttpAsrEngine.kt  TextRefiner.kt  WhisperAsrEngine.kt
src/test/kotlin/com/mengchuangjianghe/asr/: AsrEngineTest.kt
